WGA samples are removed from analysis of chromosome 1.

--- a/inst/scripts/Makefile
+++ b/inst/scripts/Makefile
@@ -1,7 +1,7 @@
 ## A Makefile for running the cbs vignette
 ## must run make from a fat node
 Beaty : Beaty.Rnw
-	echo "Stangle(\"Beaty.Rnw\")"| R --no-save --no-restore;	
+	echo "Stangle(\"Beaty.Rnw\")"| R-devel --no-save --no-restore;	
 	cat ~/bin/cluster.templateRelease | perl -pe "s/Rprog/Beaty.R/" > Beaty.R.sh
 	qsub -m e -r y -cwd -l mem_free=5G,h_vmem=12G Beaty.R.sh
 clean:
