Use a different alpha for segmenting the parent genomes -- make it more sensitive to bumps in the logR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 importClassesFrom(mybase, "LogRatioSet")
 importMethodsFrom(mybase, "baf")
+importMethodsFrom(mybase, "logR")
 exportPattern("^[^\\.]")
 
 
