Add several Sweave files that are called from Beaty.
- AllChromosomes.Rnw:  loops through all chromosomes
- CommonVariants.Rnw:  check denovo events against all the variants in the database of genomic variants
- DenovoFigures.Rnw:   plots for assessing denovo calls
- beaty_samples.csv:   the sample we are using in this analysis (no WGA samples, no samples with MAD(logR Ratio) > 0.3)

--- a/inst/scripts/Makefile
+++ b/inst/scripts/Makefile
@@ -4,6 +4,12 @@ Beaty : Beaty.Rnw
 	echo "Stangle(\"Beaty.Rnw\")"| R-devel --no-save --no-restore;	
 	cat ~/bin/cluster.template | perl -pe "s/Rprog/Beaty.R/" > Beaty.R.sh
 	qsub -m e -r y -cwd -l mem_free=5G,h_vmem=12G Beaty.R.sh
+
+segmentation: segmentation.Rnw
+	echo "Stangle(\"segmentation.Rnw\")"| R-devel --no-save --no-restore;	
+	cat ~/bin/cluster.template | perl -pe "s/Rprog/segmentation.R/" > segmentation.R.sh
+	qsub -m e -r y -cwd -l fat -l mem_free=5G,h_vmem=12G segmentation.R.sh
+
 clean:
 	-rm *.pdf
 	-rm /amber1/scratch/rscharpf/beaty_beadStudio/denovo.rda
