Updates to AllChromosome code to find denovo regions
1.  construct the set of disjoint ranges from all deletion
2.  For each offspring,
    a. find the disjoint offspring ranges
        i.  count the overlap of disjoint ranges with offspring deletions.
	    Recognize that the minimum overlap should be 2.

	ii. the disjoint offspring ranges are the disjoint ranges that overlap with a offspring deletion

    b.  find the disjoint parent ranges	 (repeating steps 1 and 2 for that offspring's parents)

    c.  find the overlap of the disjoint offspring ranges and the disjoint parent ranges

    d.  a denovo range is a disjoint range that overlapped with a deletion in the offspring but did not overlap with a deletion in either parent

--- a/inst/scripts/Makefile
+++ b/inst/scripts/Makefile
@@ -3,12 +3,17 @@
 Beaty : Beaty.Rnw
 	echo "Stangle(\"Beaty.Rnw\")"| R-devel --no-save --no-restore;	
 	cat ~/bin/cluster.template | perl -pe "s/Rprog/Beaty.R/" > Beaty.R.sh
-	qsub -m e -r y -cwd -l mem_free=5G,h_vmem=12G Beaty.R.sh
+	qsub -m e -r y -cwd -l mem_free=15G,h_vmem=20G Beaty.R.sh
 
 segmentation: segmentation.Rnw
 	echo "Stangle(\"segmentation.Rnw\")"| R-devel --no-save --no-restore;	
 	cat ~/bin/cluster.template | perl -pe "s/Rprog/segmentation.R/" > segmentation.R.sh
 	qsub -m e -r y -cwd -l fat -l mem_free=5G,h_vmem=12G segmentation.R.sh
+
+readBS: ReadBeadStudio.Rnw	
+	echo "Stangle(\"ReadBeadStudio.Rnw\")"| R-devel --no-save --no-restore;	
+	cat ~/bin/cluster.template | perl -pe "s/Rprog/ReadBeadStudio.R/" > ReadBeadStudio.R.sh
+	qsub -m e -r y -cwd -l fat -l mem_free=5G,h_vmem=12G ReadBeadStudio.R.sh
 
 clean:
 	-rm *.pdf
