--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Beaty 
 Type: Package
 Title: Analysis of trios on the Illumina platform
-Version: 0.0.1
-Date: 8/14/2009
+Version: 0.0.2
+Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of trios on the Illumina platform
@@ -13,6 +13,11 @@ collate: AllClasses.R
 	 AllGenerics.R
 	 methods-CNSet.R
 	 methods-MultiSet.R
+	 methods-GRanges.R
 	 functions.R
+	 plot-functions.R
+	 tdt-functions.R
+	 phenodata-functions.R
+	 biparental-functions.R
 	 zzz.R
 LazyLoad: yes
