Less stringent cutoff for pHet results in more hits.
Adds a family() method for RangedData and eSet objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ collate: AllClasses.R
 	 methods-CNSet.R
 	 methods-MultiSet.R
 	 methods-GRanges.R
+	 methods-RangedData.R
 	 functions.R
 	 utils.R	 
 	 plot-functions.R
