transpose table 3 in readTable3.  Initialize table 3 with 1e-9 instead of 0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,8 @@ importFrom(graphics, abline, axis, layout, legend, mtext, par, plot,
 importClassesFrom(mybase, "LogRatioSet")
 importMethodsFrom(mybase, "baf", "baf<-")
 importMethodsFrom(mybase, "logR", "logR<-")
+importFrom(mybase, unique)
 exportPattern("^[^\\.]")
-exportMethods("plot")
+exportMethods(plot)
 
 
