--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,26 @@
 Package: Beaty
 Type: Package
-Title: Analysis of trios on the Illumina platform
-Version: 0.0.3
+Title: Analysis of Cleft trios on the Illumina platform
+Version: 0.0.4
 Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
-Description: Analysis of trios on the Illumina platform
+Description: Analysis of Cleft trios on the Illumina platform
 License: Artistic-2.0
-Depends: oligoClasses
-Imports: mybase
+Depends: oligoClasses (>= 1.15.7)
+Imports: mybase, IRanges, ff (>= 2.2-1)
 collate: AllClasses.R
-	 AllGenerics.R
+         AllGenerics.R
+	 methods-AnnotatedDataFrame.R
+	 methods-AssayData.R
 	 methods-CNSet.R
 	 methods-CopyNumberSet.R
-	 methods-MultiSet.R
-	 methods-GRanges.R
-	 methods-RangedData.R
 	 methods-LikSet.R
+	 methods-MultiSet.R
+	 methods-RangedData.R
+	 methods-RangedDataCNV.R
+	 methods-TrioSet.R
 	 functions.R
 	 utils.R
-	 plot-functions.R
-	 tdt-functions.R
-	 phenodata-functions.R
-	 biparental-functions.R
 	 zzz.R
 LazyLoad: yes
