--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ importFrom(oligoClasses, isFF)
 ##exportPattern("^[^\\.]")
 exportClasses(RangedDataCNV, TrioSet)
 exportMethods(plot, nMarkers, state, copyNumber, open, close,
-	      calculateMindist)
+	      calculateMindist, mindist, "mindist<-")
 export(ssampleNames, sssampleNames, ss, s, fullId)
 export(beadstudiodir,
        completeTrios, getAllBayesFactorRanges,
