--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: Beaty
 Type: Package
 Title: Analysis of Cleft trios on the Illumina platform
-Version: 0.0.9
+Version: 0.0.10
 Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of Cleft trios on the Illumina platform
 License: Artistic-2.0
 Depends: oligoClasses (>= 1.15.7)
-Imports: mybase, IRanges, ff (>= 2.2-1)
+Imports: IRanges, ff (>= 2.2-1), Biobase
 collate: AllClasses.R
          AllGenerics.R
 	 methods-AnnotatedDataFrame.R
@@ -16,6 +16,7 @@ collate: AllClasses.R
 	 methods-CNSet.R
 	 methods-CopyNumberSet.R
 	 methods-LikSet.R
+	 methods-LogRatioSet.R
 	 methods-MultiSet.R
 	 methods-RangedData.R
 	 methods-RangedDataCNV.R
