--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: Beaty
 Type: Package
 Title: Analysis of Cleft trios on the Illumina platform
-Version: 0.0.15
+Version: 0.0.16
 Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of Cleft trios on the Illumina platform
 License: Artistic-2.0
 Depends: oligoClasses (>= 1.15.7)
-Imports: IRanges, ff (>= 2.2-1), Biobase
+Imports: IRanges, ff (>= 2.2-1), Biobase, DNAcopy
 collate: AllClasses.R
          AllGenerics.R
 	 methods-AnnotatedDataFrame.R
