--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(stats, mad)
 
 importClassesFrom(IRanges, RangedData, IRanges, DataTable, Vector, Annotated, List, DataTableORNULL)
 importMethodsFrom(IRanges, start, end)
+importFrom(IRanges, IRanges, RangedData)
 
 importMethodsFrom(oligoClasses, open, close)
 importFrom(oligoClasses, isFF, getBar)
