Begin rewriting computeBayesFactor for TrioSet and RangedDataCNV objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,7 @@ export(ssampleNames, sssampleNames, ss, s, fullId)
 export(beadstudiodir,
        completeTrios, getAllBayesFactorRanges,
        isDenovo, readPennCnv, harmonizeStates, pennStats,
-       pennDenovoFreq, readCbsBatchFiles, readPedfile,
+       pennDenovoFreq, loadBatchFiles, readPedfile,
        wrapperPosteriorProbs)
 
 
