--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Beaty
 Type: Package
 Title: Analysis of Cleft trios on the Illumina platform
-Version: 0.0.25
+Version: 0.0.26
 Date: 11/13/2010
 Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of Cleft trios on the Illumina platform
 License: Artistic-2.0
-Depends: oligoClasses (>= 1.15.7), DNAcopy, IRanges
+Depends: oligoClasses (>= 1.15.7), DNAcopy, IRanges, lattice
 Imports: IRanges, ff (>= 2.2-1), Biobase
 collate: AllClasses.R
          AllGenerics.R
