--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(beadstudiodir,
        fullId,
        getAllBayesFactorRanges,
        getKey,
+       gridlayout,
        harmonizeStates,
        isDenovo,
        loadBatchFiles,
