Add a check to xsegment method that the end.index is less than or equal to the number of rows in the TrioSet object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ importFrom(graphics, abline, axis, layout, legend, mtext, par, plot,
 
 importClassesFrom(Biobase, eSet)
 importMethodsFrom(Biobase, annotatedDataFrameFrom, updateObject)
-importFrom(Biobase, assayDataElementReplace, sampleNames, varLabels, rowMedians)
+importFrom(Biobase, assayDataElementReplace, sampleNames, varLabels, rowMedians, "sampleNames<-")
 
 ##importFrom(mybase, unique)
 importFrom(stats, mad)
