Add constructor functions RangedDataCNV, RangedDataCBS, RangedDataHMM to initialize objects of the class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,6 @@ exportMethods(baf, "baf<-",
 	      offspringNames,
 	      phenoData2, "phenoData2<-",
 	      prune,
-	      RangedDataCNV,
 	      state,
 	      updateObject,
 	      xsegment,
@@ -60,6 +59,9 @@ export(beadstudiodir,
        prepanel.fxn,
        readPedfile,
        readPennCnv,
+       RangedDataCNV,
+       RangedDataCBS,
+       RangedDataHMM,
        ssampleNames, sssampleNames, ss, s,
        wrapperPosteriorProbs)
 
