Add function for computing concordance at the top

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ exportMethods(baf, "baf<-",
 	      mindist, "mindist<-",
 	      motherNames,
 	      ncol,
+	      nrow,
 	      offspringNames,
 	      phenoData2, "phenoData2<-",
 	      prune,
@@ -45,6 +46,7 @@ exportMethods(baf, "baf<-",
 	      xyplot)
 export(beadstudiodir,
        completeTrios,
+       concAtTop,
        fmoNames,
        fullId,
        getAllBayesFactorRanges,
