Add function for reading penn files and coercing to RangedDataHMM object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(beadstudiodir,
        prepanel.fxn,
        readPedfile,
        readPennCnv,
+       readPennFiles,
        RangedDataCNV,
        RangedDataCBS,
        RangedDataHMM,
