export minimumDistance. Coerce xsegment result to RangedDataCBS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(beadstudiodir,
        harmonizeStates,
        isDenovo,
        loadBatchFiles,
+       minimumDistance,
        my.xypanel,
        pennDenovoFreq,
        pennStats,
