--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(beadstudiodir,
        isDenovo,
        loadBatchFiles,
        minimumDistance,
+       minimumDistanceCalls,
        my.xypanel,
        pennDenovoFreq,
        pennStats,
