export xypanel. Allow panel to be specific as argument to xyplot method for trioSetList

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,6 @@ export(beadstudiodir,
        RangedDataCBS,
        RangedDataHMM,
        ssampleNames, sssampleNames, ss, s,
-       wrapperPosteriorProbs)
+       xypanel)
 
 
