minimumDistanceCalls requires specification of cbs.filename if segment.md is true

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(beadstudiodir,
        RangedDataCBS,
        RangedDataHMM,
        ssampleNames, sssampleNames, ss, s,
+       todf,
        xypanel)
 
 
