--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Author: Robert B Scharpf
 Maintainer: Robert B Scharpf <rscharpf@jhsph.edu>
 Description: Analysis of Cleft trios on the Illumina platform
 License: Artistic-2.0
-Depends: oligoClasses (>= 1.15.7), DNAcopy, IRanges, lattice, grid
-Imports: IRanges, ff (>= 2.2-1), Biobase, crlmm, utils
+Depends: oligoClasses (>= 1.15.7), DNAcopy, lattice, grid, IRanges
+Imports: ff (>= 2.2-1), Biobase, crlmm, utils
 collate: AllClasses.R
          AllGenerics.R
 	 methods-AnnotatedDataFrame.R
